--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev-start": "nodemon ./bin/www",
-    "dev": "DEBUG=expense-tracker-new:* yarn run dev-start"
+    "build": "yarn --cwd client install && yarn --cwd client build",
+    "dev-server": "nodemon --ignore /client ./bin/www",
+    "dev-server-start": "DEBUG=expense-tracker-new:* yarn run dev-server",
+    "client-start": "yarn --cwd client start",
+    "dev": "concurrently --names 'SERVER,CLIENT' -c 'bgBlue.bold,bgMagenta.bold' 'yarn run dev-server-start' 'yarn run client-start'"
   },
   "dependencies": {
     "debug": "~2.6.9",
