--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "mongoose": "^5.9.15",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
-    "dotenv": "^8.2.0",
     "nodemon": "^2.0.4"
   }
 }
