--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.10.1",
+    "@material-ui/core": "4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "mongoose": "^5.10.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "mongoose": "5.10.11",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-number-format": "^4.4.1",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
