--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "mongoose": "^5.10.11",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "mongoose": "^5.11.13",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-number-format": "^4.4.1",
-    "react-scripts": "^4.0.0"
+    "react-number-format": "^4.4.4",
+    "react-scripts": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +32,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "resolutions": {
+    "immer": "^8.0.1"
+  }
 }
